Fix for smaller screens and add screen too small warning

--- a/src/style.sass
+++ b/src/style.sass
@@ -1,12 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:ital,wght@0,100;1,100&display=swap')
 
 $base-color: #F2ECE9
+$warning-color: #ff0000
 
 :root
 	color: $base-color
-
-em
-	font-style: italic
 
 h1
 	font-family: 'Playfair Display', serif
@@ -31,7 +29,6 @@ body
 	text-align: center
 
 #booklet-container
-	margin: auto
 	overflow: hidden
 
 .flip-book
@@ -42,10 +39,15 @@ body
 .page
 	border: solid 1px gray
 	overflow: hidden
-
 	.page-content
 		width: 100%
 		height: 100%
 		background-size: contain
 		background-position: center center
 		background-repeat: no-repeat
+
+#size-warning
+	color: $warning-color
+	display: none
+	@media ( max-width:	900px)
+		display: block
